feat: open graph data added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Tiktok Clone</title>
+    <!-- HTML Meta Tags -->
+    <meta
+      name="description"
+      content="TikTok - trends start here. On a device or on the web, viewers can watch and discover millions of personalized short videos. Download the app to get started."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.tiktok.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TikTok - Make Your Day" />
+    <meta
+      property="og:description"
+      content="TikTok - trends start here. On a device or on the web, viewers can watch and discover millions of personalized short videos. Download the app to get started."
+    />
+    <meta property="og:image" content="/poster-square.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="tiktok.com" />
+    <meta property="twitter:url" content="https://www.tiktok.com/" />
+    <meta name="twitter:title" content="TikTok - Make Your Day" />
+    <meta
+      name="twitter:description"
+      content="TikTok - trends start here. On a device or on the web, viewers can watch and discover millions of personalized short videos. Download the app to get started."
+    />
+    <meta name="twitter:image" content="/poster-square.png" />
   </head>
   <body class="dark">
     <div id="root"></div>
