--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://www.tiktok.com/" />
+    <meta
+      property="og:url"
+      content="https://tiktok-clone-sahilverma.vercel.app/"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="TikTok - Make Your Day" />
     <meta
@@ -24,7 +27,10 @@
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="tiktok.com" />
-    <meta property="twitter:url" content="https://www.tiktok.com/" />
+    <meta
+      property="twitter:url"
+      content="https://tiktok-clone-sahilverma.vercel.app/"
+    />
     <meta name="twitter:title" content="TikTok - Make Your Day" />
     <meta
       name="twitter:description"
