--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       content="TikTok - trends start here. On a device or on the web, viewers can watch and discover millions of personalized short videos. Download the app to get started."
     />
     <meta name="twitter:image" content="/poster-square.png" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body class="dark">
     <div id="root"></div>
